--- a/bandsApp/views/profile.ejs
+++ b/bandsApp/views/profile.ejs
@@ -3,7 +3,7 @@
 <div class="row mt-5">
     <div class="col-md-6 m-auto">
       <div class="card card-body">
-            <h1 class="text-center mb-3"><i class="fas fa-edit"></i> Profile </h1>
+            <h1 class="text-center mb-3"><i class="fas fa-user"></i> Profile </h1>
             <% include ./partials/messages %>
             <form action="/users/user/<%= user.uid %>" method="POST" id="updateProfile">
                 <div class="form-group">
